# dartboard

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  justfile
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: draft-release-on-push.yml  publish-crates-on-release-published.yml  publish-release-and-crates-on-tag.yml
aidocs/: IMPROVE-REUSABILITY.md  KEYMAP-THEN-MORE-REUSE-REFACTORING.md  PLAN-1-FULLWIDTH-2-CELLS.md  PLAN-MULTIPLAYER-LATE-SH.md  PLAN-MULTIPLAYER-WS-DEMO.md  PLAN-MVP1.md  PLAN-MVP2.md  PLAN-MVP3.md  PLAN-NEXT.md  PLAN-PHASE1-REUSABLE-PICKER-PIECES.md  PLAN-ROADMAP.md  PLAN-SINGLEPLAYER-INPROC.md
dartboard/: Cargo.toml
dartboard-cli/: Cargo.toml
dartboard-cli/src/: app.rs  input.rs  main.rs  theme.rs  ui.rs
dartboard-cli/src/emoji/: catalog.rs  mod.rs  picker.rs
dartboard-client-ws/: Cargo.toml
dartboard-client-ws/src/: lib.rs
dartboard-core/: Cargo.toml
dartboard-core/src/: canvas.rs  lib.rs  ops.rs  wire.rs
dartboard-editor/: Cargo.toml
dartboard-editor/src/: keymap.rs  lib.rs  session_mirror.rs
dartboard-local/: Cargo.toml
dartboard-local/src/: lib.rs
dartboard-picker-core/: Cargo.toml
dartboard-picker-core/src/: lib.rs  sources.rs
dartboard-server/: Cargo.toml
dartboard-server/src/: lib.rs  ws.rs
dartboard-server/tests/: ws_roundtrip.rs
dartboard-tui/: Cargo.toml
dartboard-tui/src/: lib.rs
dartboard/src/: app.rs  input.rs  lib.rs  main.rs  theme.rs  ui.rs
dartboard/src/emoji/: ring_cursor.rs
src/: app.rs  canvas.rs  main.rs  theme.rs  ui.rs
src/emoji/: catalog.rs  mod.rs  nerd_fonts.rs  picker.rs
