[workspace]
resolver = "2"
members = [
    "dartboard-core",
    "dartboard-picker-core",
    "dartboard-editor",
    "dartboard-local",
    "dartboard-server",
    "dartboard-client-ws",
    "dartboard-tui",
    "dartboard-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
dartboard-core = { path = "dartboard-core" }
dartboard-picker-core = { path = "dartboard-picker-core" }
dartboard-editor = { path = "dartboard-editor" }
dartboard-local = { path = "dartboard-local" }
dartboard-server = { path = "dartboard-server" }
dartboard-client-ws = { path = "dartboard-client-ws" }
dartboard-tui = { path = "dartboard-tui" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "io-util", "time"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

[profile.release]
lto = "thin"
