[package]
name = "dartboard-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
documentation = "https://docs.rs/dartboard-cli"
description = "Terminal drawing board application for local and shared sessions"
keywords = ["terminal", "tui", "drawing", "canvas", "multiplayer"]

[[bin]]
name = "dartboard"
path = "src/main.rs"

[dependencies]
dartboard-core.workspace = true
dartboard-picker-core.workspace = true
dartboard-editor.workspace = true
dartboard-server.workspace = true
dartboard-client-ws.workspace = true
dartboard-tui.workspace = true

ratatui = "0.30"
crossterm = { version = "0.29", features = ["osc52"] }
emojis = "0.7"
serde_json.workspace = true
unicode_names2 = "2"
unicode-width.workspace = true
rand = "0.8"
