[package]
name = "dartboard-client-ws"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dartboard-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
