[package]
name = "dartboard-client-ws"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
documentation = "https://docs.rs/dartboard-client-ws"
description = "WebSocket client transport for dartboard sessions"
keywords = ["terminal", "websocket", "canvas", "client", "collab"]

[dependencies]
dartboard-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
