[package]
name = "dartboard-editor"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
documentation = "https://docs.rs/dartboard-editor"
description = "Host-neutral editor state and input dispatch for dartboard"
keywords = ["terminal", "editor", "canvas", "unicode", "tui"]

[dependencies]
dartboard-core.workspace = true
