[package]
name = "dartboard-picker-core"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
documentation = "https://docs.rs/dartboard-picker-core"
description = "Icon catalog and glyph source helpers for dartboard pickers"
keywords = ["terminal", "picker", "emoji", "unicode", "icons"]

[dependencies]
emojis = "0.7"
serde_json.workspace = true
unicode_names2 = "2"
