[package]
name = "dartboard-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dartboard-core.workspace = true
dartboard-local.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true

[dev-dependencies]
dartboard-client-ws.workspace = true
