[package]
name = "dartboard-server"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
documentation = "https://docs.rs/dartboard-server"
description = "WebSocket server transport and headless server for dartboard"
keywords = ["terminal", "websocket", "server", "canvas", "collab"]

[dependencies]
dartboard-core.workspace = true
dartboard-local.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true

[dev-dependencies]
dartboard-client-ws.workspace = true
