[package]
name = "dartboard-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
documentation = "https://docs.rs/dartboard-tui"
description = "Reusable ratatui canvas widget for dartboard"
keywords = ["terminal", "tui", "ratatui", "canvas", "widget"]

[dependencies]
dartboard-core.workspace = true
ratatui = "0.30"
unicode-width.workspace = true
